<resources>
    <string name="app_name">BazarApp</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txtProductDescriptionTitle_ProductInfoActivity"><u>Product details</u></string>
    <string name="default_notification_channel_id" translatable="false">BazarAppNotificationChannel</string>
    <string name="ActivitiesHeader_AppName">BAZAR APPLICATION</string>
    <string name="ShoppingCartActivity_txtTotalPriceTitle">Total :</string>
    <string name="etxtCustomerName_BuyingRequestActivity">Full name</string>
    <string name="etxtCustomerMobile_BuyingRequestActivity">Mobile</string>
    <string name="txtTotalPriceTitle_BuyingRequestActivity">Total :</string>
    <string name="btnBuyingRequest_BuyingRequestActivity">Submit purchase order</string>
    <string name="btnAddProductToCart_ProductInfoActivity">Add to shopping cart</string>
    <string name="txtProductCodeTitle_ProductInfoActivity">Product code :</string>
    <string name="txtProductName_ProductInfoActivity">product name</string>
    <string name="txtNumOfReviews_ProductInfoActivity">0</string>
    <string name="txtProductReviews_ProductInfoActivity">Product reviews</string>
    <string name="txtAddReviewToProduct_ProductInfoActivity">Add review!!!</string>
    <string name="txtProductPrice_ProductInfoActivity">00000</string>
    <string name="txtProductDiscount_ProductInfoActivity">00000</string>
    <string name="txtQtyToBuy_ProductInfoActivity">00</string>
    <string name="txtProductAvailability_ProductInfoActivity">Available in stock</string>
    <string name="txtProviderNameTitle_ProductInfoActivity">Provider :</string>
    <string name="txtProviderName_ProductInfoActivity">provider name</string>
    <string name="txtItemBrandTitle_ProductInfoActivity">Brand name :</string>
    <string name="txtItemBrand_ProductInfoActivity">brand</string>
    <string name="txtItemDateTitle_ProductInfoActivity">Product date :</string>
    <string name="txtItemDate_ProductInfoActivity">product date</string>
    <string name="txtItemExpDateTitle_ProductInfoActivity">Product expiration date :</string>
    <string name="txtItemExpDate_ProductInfoActivity">product expire date</string>
    <string name="txtItemSellsCountTitle_ProductInfoActivity">Sells count :</string>
    <string name="txtItemSellsCount_ProductInfoActivity">product sells count</string>
    <string name="txtItemLastSellDateTitle_ProductInfoActivity">Last sell Date :</string>
    <string name="txtItemLastSellDate_ProductInfoActivity">Last sell date</string>
    <string name="txtProductOtherDescriptionTitle_ProductInfoActivity">Other information :</string>
    <string name="btnProceedToPurchase_ShoppingCartActivity">Proceed to purchase</string>
    <string name="txtProductName_addReviewToProductLayout">product name</string>
    <string name="txtRatingProductTitle_addReviewToProductLayout">Product rate :</string>
    <string name="etxtReviewerNickName_Hint_addReviewToProductLayout">Nickname</string>
    <string name="etxtReviewTitle_Hint_addReviewToProductLayout">Title</string>
    <string name="etxtReviewBody_Hint_addReviewToProductLayout">Review content</string>
    <string name="btnSubmitReview_addReviewToProductLayout">SUBMIT REVIEW</string>
    <string name="btnAlertDialogConfirm_AlertDialogLayout">OK</string>
    <string name="btnAlertDialogCancel_AlertDialogLayout">Cancel</string>
    <string name="txtCategoryTitle_CategoriesMenuRecyclerItem">category</string>
    <string name="etxtSearchBoxForProducts_Hint_MainActivitySearchFragment">Search for products!!!</string>
    <string name="txtTitle_MainActivitySearchFragment">searched products</string>
    <string name="etxtSearchBoxForProducts_Hint_MainActivityMainFragment">Search for products!!!</string>
    <string name="txtRecommendedForYouRecyclerTitle_MainActivityMainFragment">Recommended for you</string>
    <string name="txtBestSellingRecyclerTitle_MainActivityMainFragment">Best selling</string>
    <string name="txtNewProductsRecyclerTitle_MainActivityMainFragment">Newly added</string>
    <string name="txtTrendingProductsRecyclerTitle_MainActivityMainFragment">Trending products</string>
    <string name="txtProductsInDiscountRecyclerTitle_MainActivityMainFragment">Discounts</string>
    <string name="txtBrandsRecyclerTitle_MainActivityMainFragment">Brands</string>
    <string name="txtProvidersNShopsRecyclerTitle_MainActivityMainFragment">Shops</string>
    <string name="txtNavigationBarTitle_MainActivityMainFragment">Select category</string>
    <string name="txtNavViewPendingRequests_MainActivityMainFragment">Pending requests</string>
    <string name="txtNavViewPurchasesArchive_MainActivityMainFragment">Purchases archive</string>
    <string name="MainActivityMainFragment_txtNavViewSettings">Settings</string>
    <string name="txtPaymentInCashTitle_PaymentMethodLayout">Pay in cash</string>
    <string name="txtPaymentInZainCashTitle_PaymentMethodLayout">Pay in zain cash</string>
    <string name="txtReviewTitle_ProductReviewsRecyclerItem">review title</string>
    <string name="txtReviewerName_ProductReviewsRecyclerItem">reviewer name</string>
    <string name="txtProductName_ProductsInInvoiceRecyclerItem">product name</string>
    <string name="txtProductPriceTitle">Price :</string>
    <string name="txtProductQtyInInvoiceTitle_ProductInInvoiceRecyclerItem">Quantity :</string>
    <string name="btnAddProductToCart_ProductsRecyclerLayoutItem">Add to cart</string>
    <string name="btnAddProductToCart_ProductsSearchRecyclerItem">Add to cart</string>
    <string name="txtProviderOrBrandName_ProvidersRecyclerLayoutItem">provider or brand</string>
    <string name="imgRecipeStatusText_PurchasesArchiveRecyclerItem">DELIVERED</string>
    <string name="txtInvoiceNumberTitle_PurchasesArchiveRecyclerItem">Invoice :</string>
    <string name="txtInvoiceCostTitle_PurchasesArchiveRecyclerItem">cost :</string>
    <string name="txtInvoiceDateTitle_PurchasesArchiveRecyclerItem">Date :</string>
    <string name="txtPaidAmountTitle_PurchasesArchiveRecyclerItem">Paid amount :</string>
    <string name="imgRecipeStatusText_PurchasesRequestRecyclerItem">APPROVED</string>
    <string name="PurchasesRequestsRecyclerItem_txtShopNameTitle">Shop name :</string>
    <string name="txtInvoiceCostTitle_PurchasesRequestsRecyclerItem">cost :</string>
    <string name="PurchasesRequestsRecyclerItem_txtItemsCountTitle">Items count :</string>
    <string name="txtPaidAmountTitle_PurchasesRequestsRecyclerItem">Paid amount :</string>
    <string name="RecipeStatusOptionsDialog_Pending">pending</string>
    <string name="RecipeStatusOptionsDialog_Approved">approved</string>
    <string name="RecipeStatusOptionsDialog_AllInvoices">All</string>
    <string name="txtProductPriceTitle_ShoppingCartRecyclerItem">Total cost :</string>
    <string name="txtProductQtyUnavailable_ShoppingCartRecyclerItem">Out of stock</string>
    <string name="txtProductQtyInCartTitle_ShoppingCartRecyclerItem">Quantity :</string>
    <string name="etxtMessageBody_MessaginSupportActivity">Write here .....</string>
    <string name="ViewAll">View all</string>
    <string name="PurchasesRequestsActivity_String1">phone call permission denied</string>
    <string name="String1_PurchasesRequestsRecyclerAdapter">PENDING</string>
    <string name="String2_PurchasesRequestsRecyclerAdapter">APPROVED</string>
    <string name="String2_ShoppingCartActivity">Sorry , zain-cash not activated yet</string>
    <string name="String1_BestSellingRecyclerAdapter">Do you want to add the product to the shopping cart</string>
    <string name="String2_BestSellingRecyclerAdapter">Product added to shopping cart</string>
    <string name="String3_BestSellingRecyclerAdapter">Sorry , your requested quantity of the product is not available</string>
    <string name="ChooseGovernorate">Choose governorate</string>
    <string name="String1_BuyingRequestActivity">Please , enter all the requested information</string>
    <string name="String2_BuyingRequestActivity">Something went wrong , please try again later</string>
    <string name="String3_BuyingRequestActivity">You need to give access to location to complete buying process</string>
    <string name="String4_BuyingRequestActivity">Your request has been sent to the management , thank you for shopping from us</string>
    <string name="String5_BuyingRequestActivity">In order to purchase from the app you require to give access to location service</string>
    <string name="IraqProvince_Baghdad">Baghdad</string>
    <string name="IraqProvince_Basrah">Basrah</string>
    <string name="IraqProvince_Nineveh">Nineveh</string>
    <string name="IraqProvince_Diwaniyah">Diwaniyah</string>
    <string name="IraqProvince_Babel">Babel</string>
    <string name="IraqProvince_Dhi_Qar">Dhi Qar</string>
    <string name="IraqProvince_Najaf">Najaf</string>
    <string name="IraqProvince_Karbala">Karbala</string>
    <string name="IraqProvince_Wasit">Wasit</string>
    <string name="IraqProvince_Muthana">Muthana</string>
    <string name="IraqProvince_Anbar">Anbar</string>
    <string name="IraqProvince_Salah_Aldeen">Salah eldin</string>
    <string name="IraqProvince_Diyala">Diyala</string>
    <string name="IraqProvince_Sulaymaniyah">Sulaymaniyah</string>
    <string name="IraqProvince_Dhok">Dhok</string>
    <string name="IraqProvince_Erbil">Erbil</string>
    <string name="IraqProvince_Missan">Missan</string>
    <string name="IraqProvince_Kirkok">Kirkok</string>
    <string name="Notice">Notice</string>
    <string name="String1_MainActivityMainFragment">"Something went wrong, please try again "</string>
    <string name="String1_MessagingSupportActivity">Failed to send</string>
    <string name="String1_NewlyAddedProductsRecyclerAdapter">Do you want to add the product to the shopping cart</string>
    <string name="String1_ProductsInDiscountRecyclerAdapter">Do you want to add the product to the shopping cart</string>
    <string name="String1_SearchProductsRecyclerAdapter">Do you want to add the product to the shopping cart</string>
    <string name="String1_TrendingProductsRecyclerAdapter">Do you want to add the product to the shopping cart</string>
    <string name="RegisterCustomerActivity_AppBarTitle">New registeration</string>
    <string name="etxtCustomerName_Hint_registerCustomerLayout">Full name*</string>
    <string name="etxtUsername_Hint_registerCustomerLayout">Username*</string>
    <string name="etxtPassword_Hint_registerCustomerLayout">password*</string>
    <string name="etxtConfirmPassword_Hint_registerCustomerLayout">Confirm password*</string>
    <string name="etxtRegion_Hint_registerCustomerLayout">Region</string>
    <string name="etxtMobile_Hint_registerCustomerLayout">Mobile*</string>
    <string name="etxtEmail_Hint_registerCustomerLayout">Email</string>
    <string name="btnConfirmRegisteration_registerCustomerLayout">REGISTER</string>
    <string name="SignInCustomerLayout_Title">Sign-in</string>
    <string name="SignInCustomerLayout_etxtUsername">Enter username</string>
    <string name="SignInCustomerLayout_etxtPassword">Enter password</string>
    <string name="SignInCustomerLayout_txtRegisterNewCustomer">New registeration</string>
    <string name="SignInCustomerLayout_btnSignIn">Sign in</string>
    <string name="PurchasesRequestsRecyclerItem_txtPaymentMethodTitle">Payment method :</string>
    <string name="ChangeAccountPasswordLayout_etxtOldPassword">Enter old password</string>
    <string name="ChangeAccountPasswordLayout_etxtNewPassword">Enter new password</string>
    <string name="ChangeAccountPasswordLayout_etxtConfirmNewPassword">Confirm password</string>
    <string name="ChangeAccountPasswordLayout_btnUpdatePassword">Update</string>
    <string name="ChangeAccountPasswordLayout_txtLayoutTitle">Change password</string>
    <string name="GlobalMessage_SelectBirthDate">Select birth date</string>
</resources>