<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/SignInCustomerLayout_Title"/>
    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:hint="@string/SignInCustomerLayout_etxtUsername"/>

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/SignInCustomerLayout_etxtPassword"/>

    <TextView
        android:id="@+id/txtRegisterNewCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/SignInCustomerLayout_txtRegisterNewCustomer"
        android:maxLength="20"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_cart_btn_shape"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/SignInCustomerLayout_btnSignIn"
        android:padding="8dp"/>
</LinearLayout>