<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/ChangeAccountPasswordLayout_txtLayoutTitle"/>

    <EditText
        android:id="@+id/etxtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/ChangeAccountPasswordLayout_etxtOldPassword"/>

    <EditText
        android:id="@+id/etxtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/ChangeAccountPasswordLayout_etxtNewPassword"/>

    <EditText
        android:id="@+id/etxtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/ChangeAccountPasswordLayout_etxtConfirmNewPassword"/>

    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_cart_btn_shape"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/ChangeAccountPasswordLayout_btnUpdatePassword"
        android:padding="8dp"/>
</LinearLayout>