<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecipeStatusOptionsDialog_Pending"/>

    <Button
        android:id="@+id/btnSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecipeStatusOptionsDialog_Approved"/>

    <Button
        android:id="@+id/btnDisplayBothTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecipeStatusOptionsDialog_AllInvoices"/>
</LinearLayout>