<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterCustomerActivity"
    android:background="@drawable/action_bar_background3">


    <LinearLayout
        android:id="@+id/llActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFinishThisActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:padding="12dp"
            android:src="@drawable/ic_reply_black" />

        <TextView
            android:id="@+id/txtMainActivityBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="13dp"
            android:layout_weight="0.9"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/RegisterCustomerActivity_AppBarTitle"
            android:textSize="20sp"
            android:textStyle="bold|italic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/llActionBar">

        <EditText
            android:id="@+id/etxtCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/etxtCustomerName_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/etxtUsername_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="textPassword"
            android:hint="@string/etxtPassword_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="textPassword"
            android:hint="@string/etxtConfirmPassword_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:maxLength="20" />

        <Button
            android:id="@+id/btnBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/GlobalMessage_SelectBirthDate"
            android:maxLength="20"
            android:background="@drawable/button_background_shape2"/>

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/etxtRegion_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="phone"
            android:hint="@string/etxtMobile_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="textEmailAddress"
            android:hint="@string/etxtEmail_Hint_registerCustomerLayout"
            android:maxLength="20" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_shape"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/btnConfirmRegisteration_registerCustomerLayout"
            android:padding="8dp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/registerCustomerProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
</RelativeLayout>